@@ -83,6 +83,9 @@ BUGFIXES:
   ZOOKEEPER-2299: NullPointerException in LocalPeerBean for ClientAddress
   (Arshad Mohammad via rgs)
 
+  ZOOKEEPER-2295: TGT refresh time logic is wrong
+  (Arshad Mohammad via rgs)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-2270: Allow MBeanRegistry to be overridden for better unit tests
